--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.4.6
   firebase_auth: ^3.7.0
+  google_fonts: ^3.0.1
 
 
 dev_dependencies:
